Fixed bug in page visibility buttons

--- a/media/boom/css/boom/page.less
+++ b/media/boom/css/boom/page.less
@@ -39,6 +39,12 @@
 		margin-top: 0px;
 	}
 
+	&-invisible, &-visible {
+		&.ui-helper-hidden {
+			display: none;
+		}
+	}
+
 	&-settings {
 		&-tags {
 			&-add {
